modules/infra/network/shd/vpc.tf
# ===================================================
# Component: Network (vpc.tf)
#
# Virsion: 1.0 (2025-03-31)
# ---------------------------------------------------
# HISTORY
# V0.1: Initial version 
#
#
# ===================================================

resource "aws_vpc" "shd-vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name       = "VPC-AN2-${var.env_name}"
    Managed_by = "terraform"
  }
}
